# musical-typer-rust

./: Cargo.toml  README.md  rust-toolchain  rustfmt.toml
src/: abst.rs  controller.rs  exp.rs  main.rs  model.rs  op.rs  sdl.rs  skin.rs  test.rs  view.rs
src/abst/: art.rs  controller.rs  presenter.rs  prim.rs  screen.rs
src/abst/art/: finder.rs  header.rs  keyboard.rs  progress.rs
src/exp/: game_activity.rs  game_stat.rs  minute_second.rs  note.rs  roman.rs  roman_char.rs  roman_lexer.rs  scoremap.rs  sentence.rs  string_to_input.rs
src/exp/roman/: roman_char.rs  roman_lexer.rs  roman_str.rs
src/exp/scoremap/: lexer.rs  parser.rs
src/model/: exp.rs  game.rs  on_game.rs
src/model/exp/: game_activity.rs  minute_second.rs  note.rs  scoremap.rs  sentence.rs  time.rs
src/model/game/: tests.rs
src/op/: on_game.rs
src/sdl/: header.rs  section.rs  text.rs  whole.rs
src/sdl/whole/: finder.rs  header.rs  keyboard.rs  section.rs
src/skin/: sdl.rs  sdl_controller.rs  sdl_presenter.rs  sdl_screen.rs
src/skin/art/: components.rs  finder.rs  header.rs
src/skin/sdl/: header.rs  keyboard.rs  section.rs
src/skin/sdl_presenter/: keyboard.rs  section.rs  text.rs
src/skin/sdl_screen/: header.rs  keyboard.rs  section.rs  text.rs
src/test/: game_mock.rs
src/view/: components.rs  game_view.rs  gameview.rs  handler.rs  player.rs  renderer.rs  result_view.rs  stats.rs  text.rs  whole.rs
src/view/components/: animator.rs  button.rs  header.rs  stats.rs  text.rs
src/view/game_view/: score_event.rs  whole.rs
src/view/gameview/: whole.rs
(+59 files in other folders)
