[package]
name = "musical-typer-rust"
version = "0.1.0"
authors = ["MikuroXina <ryosukadnak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["ttf"]
