[package]
name = "musical-typer-rust"
version = "0.1.0"
authors = ["MikuroXina <ryosukadnak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]

[dependencies]
regex = "1.5.4"
rand = "0.8.3"
sdl2 = { version = "0.34.5", default-features = false, features = ["ttf", "mixer"] }
readonly = "0.2.0"
